addition of two collection, users and shop
